<resources>
    <string name="app_name">Contractors Smart</string>
    <string name="default_notification_channel_id">100</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string-array name="quantity_items">
        <item>Select</item>
        <item>KG</item>
        <item>Ltrs</item>
        <item>No</item>
        <item>Ton</item>
        <item>Meter</item>
    </string-array>
    <string-array name="profession_items">
        <item>Select Profession</item>
        <item>Contractor</item>
        <item>Distributor</item>
        <item>Dealer</item>
        <item>Other</item>
    </string-array>
    <string-array name="city_spinner_array">
        <item>Select City</item>
    </string-array>
    <string name="title_activity_home_new">HomeActivityNew</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="home_second">Home Second</string>
    <string name="dashboard">Dashboard</string>
    <string name="post_ad">Post Ad</string>
    <string name="my_ads">My Ads</string>
    <string name="buyer_enquiry_form">Buyer enquiry form</string>
    <string name="my_profile">My profile</string>
    <string name="logout">Logout</string>
    <string name="my_inbox">My Messages</string>
    <string name="failure_time_out_error">Request time out!</string>
    <string name="failure_something_went_wrong">Something went wrong please try again later!</string>
    <string name="failure_server_not_responding">Oops! looks like we are having internal problems. Please try again later.</string>
    <string name="failure_internet_connection">Internet connection appears to be offline. Please check your network settings.</string>
    <string name="enter_message">Enter message</string>
    <string name="my_notifications">My Notifications</string>
    <string name="crash_dialog_title">Contractors Smart is crashed</string>
    <string name="crash_dialog_text">An unexpected error occurred forcing the
    application to stop. Want to send the report to the developer ?</string>
    <string name="feedback">Feedback</string>
    <string name="about_us">About Us</string>
    <string name="change_password">Change Password</string>
    <string name="contact_us">Contact Us</string>
    <string name="product_description">Product description</string>
    <string name="my_wishlist">My Wishlist</string>
    <string name="terms_amp_conditions"><![CDATA[Terms & Conditions]]></string>
    <string name="enter_registered_email">Email (Enter registered email)</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="sign_in">SIGN IN</string>
    <string name="or_log_in_with">Or log in with</string>
    <string name="register"> Register</string>
    <string name="whatsapp_number_only_whatsapp_no">Whatsapp Number (Only Whatsapp No)</string>
    <string name="fullname">Full Name</string>
    <string name="email">Email</string>
    <string name="alternative_mobile_number_optional">Alternative Mobile Number (Optional)</string>
    <string name="area_material_location">Area (Material Location)</string>
    <string name="price_approximate">(Approximate) Price</string>
    <string name="product_name_ex_wire_steel_cement_fan_fittings_etc">Product name ex. Wire, Steel, Cement, Fan, Fittings etc</string>
    <string name="brand_name_ex_bajaj_havells_philips_etc">Brand Name ex. Bajaj, Havells, Philips etc.</string>
    <string name="quantity">Quantity</string>
    <string name="other_unit_type">Other unit type</string>
    <string name="item_location">Item Location</string>
    <string name="inventory_status">Inventory Status</string>
    <string name="profile_text">profile</string>
    <string name="adhar_front_text">front</string>
    <string name="adhar_back_text">back</string>
    <string name="select_city">Select City</string>
    <string name="select_profession">Select Profession</string>
    <string name="accept_privacy"> Please accept privacy policy</string>
    <string name="accept_terms">Please accept terms and conditions</string>
    <string name="image_format">.png</string>
    <string name="privacy_policy">By Selecting I agree to Privacy Policy</string>
    <string name="privacy_policy_label">Privacy Policy</string>
    <string name="terms_and_condition">By Selecting I agree to Terms and Conditions</string>
    <string name="terms_and_condition_label">Terms and Conditions</string>
    <string name="name_of_the_company">Name of the company</string>
    <string name="contact_person_name">Contact Person Name</string>
    <string name="mobile_whatsapp_number">Mobile/WhatsApp Number</string>
    <string name="company_email">Company Email</string>
    <string name="logo_image">logo_image</string>
    <string name="profile_picture">Profile Picture</string>
    <string name="adhar_card_front">Aadhaar Card Front</string>
    <string name="adhar_card_back">Aadhaar Card Back</string>
    <string name="added">Added</string>
    <string name="city">City</string>
    <string name="api_key">AIzaSyDHeMEtVShLS9Vn71GLav03aLpKXKfKvD4</string>
    <string name="select_unit">Select Unit</string>
    <string name="select_category">Select Category</string>
    <string name="are_you_sure">Are you sure, you want to logout?</string>
    <string name="no_internet_connection">No internet connection</string>
    <string name="enter_here_to_search">Enter here to search from list</string>
    <string name="search">Search</string>
    <string name="no_ads">No Ads</string>
    <string name="please_specify">Please specify</string>
    <string name="next">NEXT</string>
    <string name="profession">Profession</string>
    <string name="to_get_work_enquiry_fill_this_form">To Get Work Enquiry Fill This Form</string>
    <string name="preferred_location">Work Preferred Location</string>
    <string name="clear_filter">Clear Filter</string>
    <string name="country_filter">IN</string>
    <string name="adhar_card">Aadhaar Card</string>
    <string name="license">License</string>
    <string name="voter_card">Voter Card</string>
    <string name="voter_card_back">Voter Card Back</string>
    <string name="voter_card_front">Voter Card Front</string>
    <string name="license_front">License Front</string>
    <string name="license_back">License Back</string>
    <string name="status">Status</string>
    <string name="available">Available</string>
    <string name="category">Category</string>
    <string name="give_your_valuable_feedback">Give your Valuable feedback</string>
    <string name="ad_shortlisted">Ad shortlisted</string>
    <string name="ad_shortlisted_no">No Ad shortlisted</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="update">Update</string>
    <string name="add_to_shortlist">Add to Shortlist</string>
    <string name="product_name">Product Name</string>
    <string name="brand_name">Brand Name</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="email_is_empty">Email is empty</string>
    <string name="password_is_empty">Password is empty</string>
    <string name="title_activity_landing">LandingActivity</string>
</resources>

